css/mystyle.css
/* UTILS */
.avatarImg {
  width: 3rem;
  border-radius: 50%;
}

.titles {
  font-size: 1.2rem;
}

.iconsSize {
  font-size: 1rem;
  color: #b1b1b1;
  margin: 5px;
}

.messageHours {
  font-size: 0.7rem;
}

/* background pagina */
body {
  height: 100vh;
  background-image: linear-gradient(to bottom,
      #009688 0px,
      #009688 15vh,
      #d7dbd7 15vh,
      #d7dbd7 100vh)
}

#backgroundPageGreen {
  background-color: ;
  height: 20vh;
}

/* Dimensioni app */

#app {
  width: 100vw;
  max-height: 100vh;
}

/* MY PROFILE */

#myProfile {
  background-color: #eaeaea;
  border: 1px solid #b1b1b1;
}


/* NOTIFICATION */

.notificationColor {
  background-color: #8edafc;
}

.notificationIcon {
  color: #8edafc;
  width: 3rem;
  height: 3rem;
  line-height: 3rem;
  border-radius: 50%;
  align-self: center;
}

.notificationIcon>i {
  font-size: 1.4rem;
  margin-left: 0.16rem;
}

/* SEARCHBAR */

#searchbar {
  background-color: #eaeaea;
  border: 1px solid #b1b1b1;
}

/* CHATS */
#chatSelection {
  background-color: #ffffff;
  /* max-height: 80vh; */
}

.chatActiveList {
  background-color: #e9ebeb;
}

.chat {
  border: 1px solid #b1b1b1;
  display: flex;
}

/* CHAT ACTIVE */

#chatActiveMain {
  background-color: #eaeaea;
  border: 1px solid #b1b1b1;
}

.disableBySearch {
  display: none;
}

/* CURRENT CHAT */

#currentChat {
  width: 100%;
  height: 100vh;
  background-image: url("../img/mine.jpg");
  border: 1px solid #b1b1b1;
}

.message {
  min-width: 20rem;
  max-width: 30rem;
}

.textSend {
  background-color: #d5f9ba;
  align-self: flex-end;
}

.textReceived {
  background-color: #ffffff;
  align-self: flex-start;
}

/* SEND MESSAGE */
#sendMessage {
  background-color: #eaeaea;
  border: 1px solid #b1b1b1;
}

#sendMessage div {
  margin: 0.5rem;
}

#sendMessage div>input {
  width: 100%;
}

